--- a/mfe2/angular.json
+++ b/mfe2/angular.json
@@ -1,31 +1,31 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": false
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "mfe2": {
-      "projectType": "application",
-      "schematics": {},
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "projectType": "application",
       "architect": {
         "build": {
-          "builder": "ngx-build-plus:browser",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "allowedCommonJsDependencies": [
               "rxjs-compat", "ng-block-ui", "primeng/progressbar", "rxjs", "primeng", "socket.io-client", "highcharts", "firebase", "@firebase/database", "@firebase/firestore", "jquery",
               "crypto-js", "stacktrace-js", "chart.js"
             ],
-            "outputPath": "dist/mfe2",
+            "outputPath": "tmp",
             "index": "src/index.html",
             "main": "src/main.ts",
+            "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.app.json",
-            "aot": true,
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/favicon.ico"
             ],
             "styles": [
               "node_modules/angular-calendar/css/angular-calendar.css",
@@ -46,64 +46,38 @@
               "node_modules/slick-carousel/slick/slick.min.js",
               "src/assets/js/bootstrap.min.js",
               "node_modules/chart.js/dist/Chart.js"
-            ],
-            "extraWebpackConfig": "webpack.config.js"
+            ]
           },
           "configurations": {
-            "development": {
-              "optimization": false,
-              "sourceMap": true,
-              "buildOptimizer": false
-            },
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
+              "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "budgets": [
+              "fileReplacements": [
                 {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
                 }
-              ],
-              "extraWebpackConfig": "webpack.prod.config.js"
+              ]
             }
           }
         },
         "serve": {
-          "builder": "ngx-build-plus:dev-server",
+          "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "mfe2:build",
-            "extraWebpackConfig": "webpack.config.js",
-            "port": 4202
+            "browserTarget": "mfe2:build"
           },
           "configurations": {
-            "development": {
-              "browserTarget": "mfe2:build:development",
-              "extraWebpackConfig": "webpack.prod.config.js"
-            },
             "production": {
-              "browserTarget": "mfe2:build:production",
-              "extraWebpackConfig": "webpack.prod.config.js"
+              "browserTarget": "mfe2:build:production"
             }
-          },
-          "defaultConfiguration": "development"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -112,16 +86,12 @@
           }
         },
         "test": {
-          "builder": "ngx-build-plus:karma",
+          "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
+            "karmaConfig": "./karma.conf.js",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "tsConfig": "src/tsconfig.spec.json",
             "scripts": [
               "src/assets/js/jquery-3.2.1.min.js",
               "src/assets/js/bootstrap.min.js",
@@ -138,32 +108,47 @@
               "src/assets/css/style.less",
               "src/styles.css"
             ],
-            "extraWebpackConfig": "webpack.config.js"
+            "assets": [
+              "src/assets",
+              "src/favicon.ico"
+            ]
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
+              "src/tsconfig.app.json",
+              "src/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
             ]
           }
-        },
+        }
+      }
+    },
+    "mfe2-e2e": {
+      "root": "e2e",
+      "sourceRoot": "e2e",
+      "projectType": "application",
+      "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
+            "protractorConfig": "./protractor.conf.js",
             "devServerTarget": "mfe2:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "mfe2:serve:production"
-            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
